--- a/css/style.css
+++ b/css/style.css
@@ -6302,7 +6302,7 @@ hr {
 
 /* Navbar */
 .dropdown-menu {
-  box-shadow: none;
+  border: none;
   font-size: 15px; }
 
 .navbar-default {
@@ -6432,7 +6432,7 @@ body > nav > div.navbar-header > button {
 
 /* Logo */
 .header-logo .col-md-12 {
-  background-color: #f8f8f8;
+  border-bottom: 1px solid #e7e9ea;
   margin-top: -25px;
   padding: 15px; }
 
@@ -6444,42 +6444,50 @@ body > nav > div.navbar-header > button {
     display: none; } }
 
 /* Primary (left block and navigation region) */
-.region-sidebar-first {
-  margin-top: 30px; }
-  .region-sidebar-first a {
-    color: #262b2d; }
-  .region-sidebar-first ul li {
+.region-sidebar-first,
+.region-sidebar-second {
+  margin-top: 50px; }
+  .region-sidebar-first a,
+  .region-sidebar-second a {
+    color: #262b2d;
+    display: block;
+    padding: 10px 0 10px 1px; }
+  .region-sidebar-first ul li,
+  .region-sidebar-second ul li {
     list-style-type: none;
-    padding: 5px; }
-    .region-sidebar-first ul li ul {
-      margin-bottom: -6px; }
-      .region-sidebar-first ul li ul li:nth-child(1) {
-        text-transform: none;
-        font-weight: normal;
-        letter-spacing: normal; }
-        .region-sidebar-first ul li ul li:nth-child(1) a {
-          color: #262b2d; }
-  .region-sidebar-first li a.is-active {
+    padding: 0;
+    margin-bottom: -5px; }
+    .region-sidebar-first ul li ul li:nth-child(1),
+    .region-sidebar-second ul li ul li:nth-child(1) {
+      text-transform: none;
+      font-weight: normal;
+      letter-spacing: normal; }
+      .region-sidebar-first ul li ul li:nth-child(1) a,
+      .region-sidebar-second ul li ul li:nth-child(1) a {
+        color: #262b2d; }
+  .region-sidebar-first li a.is-active,
+  .region-sidebar-second li a.is-active {
     font-weight: bold; }
-  .region-sidebar-first li:nth-child(1) {
+  .region-sidebar-first li:nth-child(1),
+  .region-sidebar-second li:nth-child(1) {
     text-transform: uppercase;
     font-weight: bold;
     letter-spacing: 1px; }
-    .region-sidebar-first li:nth-child(1) a {
-      color: #981e32; }
+    .region-sidebar-first li:nth-child(1) a,
+    .region-sidebar-second li:nth-child(1) a {
+      color: #981e32;
+      border-top: none; }
 
 /* Main content */
-/* .container-max-width {
-  max-width: 1920px;
-  margin: auto;
-} */
 .region-content {
-  margin-top: 30px;
+  margin-top: 50px;
   margin-bottom: 20px; }
 
 .region-content p + h2, .region-content p + h3, .region-content p + h4,
-.region-content table + h2, .region-content table + h3 {
-  margin-top: 35px; }
+.region-content table + h2, .region-content table + h3,
+.region-content ul + h2, .region-content ul + h3, .region-content ul + h4,
+.region-content ol + h2, .region-content ol + h3, .region-content ol + h4 {
+  margin-top: 40px; }
 
 .region-content p {
   line-height: 1.6em; }
@@ -6489,6 +6497,10 @@ body > nav > div.navbar-header > button {
 } */
 .region-content a {
   text-decoration: underline; }
+
+.region-content h1.page-header {
+  font-size: 3em;
+  border-bottom: none; }
 
 .region-content h4.label {
   color: #262b2d; }
@@ -6506,14 +6518,14 @@ body > nav > div.navbar-header > button {
 
 .region-content blockquote {
   border-color: #981e32;
-  margin-left: 28px; }
+  margin: 30px 0 30px 28px; }
   .region-content blockquote a strong {
     color: #981e32; }
   .region-content blockquote p {
     margin-left: 5px; }
 
 .region-content button.btn-primary {
-  margin: 10px 10px 10px 25px;
+  margin: 10px 10px 10px 0;
   padding: 10px 15px 10px 15px;
   box-shadow: none;
   border: 0; }
@@ -6521,17 +6533,20 @@ body > nav > div.navbar-header > button {
     color: #fff;
     text-decoration: none; }
 
-.table > tbody > tr > th {
-  padding: 15px;
-  background: #981e32;
-  color: #fff; }
+.table {
+  border: 1px solid #e7e9ea;
+  margin-top: 20px;
+  margin-bottom: 30px; }
 
-.table > tbody > tr > td {
+.table > tbody > tr > th {
   padding: 15px;
   background: #f8f8f8; }
 
+.table > tbody > tr > td {
+  padding: 15px; }
+
 .region-content table {
-  max-width: 92%; }
+  max-width: 95%; }
 
 /* Prevent tables from overflowing into secondary right sidebar block region */
 #user-login-form,
@@ -6555,32 +6570,65 @@ ul.tabs--primary {
 
 @media (max-width: 767px) {
   body > div.main-container.container-fluid.js-quickedit-main-content > div {
-    margin-top: -30px; } }
+    margin-top: -30px; }
+  .region-content {
+    margin-top: 8px; } }
 
 /* Main content - Bootstrap paragraphs */
 .paragraph__column blockquote {
-  margin-top: 1.25em; }
+  margin-top: 1.5em;
+  border-left: 10px solid #981e32; }
 
-.paragraph--type--bp-image {
-  margin-top: 2em; }
+.paragraph__column ul li {
+  padding-bottom: 0; }
+
+.paragraph__column a {
+  color: #981e32; }
+
+.paragraph__column h2 {
+  margin-top: 34px;
+  padding-top: 18px;
+  border-top: 10px solid #f8f8f8; }
+
+.paragraph--color--rgba-grey-slight {
+  background-color: #f8f8f8; }
 
 .paragraph--type--xeno-hero__image {
   background-color: #fff;
-  background-size: cover; }
-
-.paragraph--type--bp-columns {
-  margin-top: 2em; }
+  background-size: cover;
+  background-attachment: fixed; }
 
 h2.hero-title {
   text-align: center;
   font-size: 5.5em;
-  text-shadow: 2px 2px 3px black; }
+  text-shadow: 3px 3px 0 black;
+  padding: .5em;
+  margin-top: 0;
+  border-top: 0; }
+
+.paragraph--type--bp-columns {
+  margin-top: 2em; }
+
+.paragraph--type--bp-image {
+  margin-top: 2em; }
+
+.paragraph--type--bp-accordion {
+  margin-top: 2em; }
+  .paragraph--type--bp-accordion .panel-title {
+    font-size: 1em; }
+  .paragraph--type--bp-accordion p {
+    margin-left: 0; }
+
+.paragraph--type--bp-tabs {
+  margin-top: 2em; }
+  .paragraph--type--bp-tabs p {
+    margin-left: 15px; }
 
 @media (max-width: 767px) {
   h2.hero-title {
     font-size: 3em; }
   .paragraph--type--xeno-hero__image {
-    background-attachment: fixed; } }
+    background-attachment: local; } }
 
 /* Main content - search results */
 #search-form {
@@ -6607,7 +6655,7 @@ div.region.region-content > ol {
 /* Secondary (right sidebar block region) */
 .well {
   padding-left: 0;
-  margin-top: -15px;
+  margin-top: 1em;
   border: 0;
   box-shadow: none;
   background-color: transparent; }
@@ -6630,23 +6678,26 @@ h2.block-title, .well img {
 
 /* Footer */
 .footer-sitemap {
-  margin-top: 30px; }
+  border-top: 1px solid #e7e9ea;
+  margin-top: 50px; }
 
 .footer-sitemap .col-md-3 {
   background-color: #f8f8f8;
   margin-bottom: 0;
   padding: 30px 15px 15px 5px;
-  font-size: 14px; }
+  font-size: 14px;
+  height: 345px; }
   .footer-sitemap .col-md-3 li, .footer-sitemap .col-md-3 li a {
     color: #333333;
     list-style-type: none;
     padding-bottom: 8px; }
   .footer-sitemap .col-md-3 li.sitemap-section {
     text-transform: uppercase;
-    letter-spacing: 1px; }
+    letter-spacing: 1px;
+    font-weight: bold; }
 
 .footer-copyright .col-md-6 {
-  background-color: #981e32;
+  background-color: #262b2d;
   margin-bottom: 0;
   padding: 15px 5px 5px 5px;
   font-size: 14px; }
@@ -6658,13 +6709,15 @@ h2.block-title, .well img {
   .footer-copyright .col-md-6 li.copyright-section {
     text-transform: uppercase;
     letter-spacing: 1px; }
-    .footer-copyright .col-md-6 li.copyright-section strong {
-      color: #fff; }
+  .footer-copyright .col-md-6 strong {
+    color: #fff; }
 
 @media (max-width: 767px) {
   body > div.footer-sitemap > div:nth-child(3),
   body > div.footer-sitemap > div:nth-child(4) {
-    display: none; } }
+    display: none; }
+  .footer-sitemap .col-md-3 {
+    height: auto; } }
 
 /**
  * Toolbar module styling.
