--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -121,7 +121,8 @@ img.horizontal-logo {
   display: none;
 }
 
-.nav > li > a:hover {
+.nav > li > a:hover,
+.nav > li > a:focus {
   text-decoration: underline;
 }
 
@@ -178,7 +179,8 @@ body > nav > div.navbar-header > button {
   background: $brand-primary;
 }
 
-#bs-primary-navbar-collapse-1 > div > form > div > div > button:hover {
+#bs-primary-navbar-collapse-1 > div > form > div > div > button:hover,
+#bs-primary-navbar-collapse-1 > div > form > div > div > button:focus {
   background: none;
 }
 
@@ -203,25 +205,55 @@ body > nav > div.navbar-header > button {
   #bs-primary-navbar-collapse-1 .input-group {
     padding-left: 0;
   }
-  #bs-primary-navbar-collapse-1 > ul > li.dropdown.open > ul > li > a:hover {
+  #bs-primary-navbar-collapse-1 > div > form > div > div > button:hover,
+  #bs-primary-navbar-collapse-1 > div > form > div > div > button:focus {
     text-decoration: underline;
   }
 }
 
-/* Logo */
+/* Logo and apply button header */
 
-.header-logo .col-md-12 {
+.header-logo .col-md-6 {
   border-bottom: 1px solid $lightgray;
   margin-top: -25px;
   padding: 15px;
+  height: 115px;
 }
 
-.header-logo .col-md-12 img.primary-logo {
+.header-logo .col-md-6 img.primary-logo {
   max-width: 250px;
+  transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -webkit-transition: all .3s ease-in-out;
+}
+
+.header-logo .col-md-6 a:hover img.primary-logo,
+.header-logo .col-md-6 a:focus img.primary-logo {
+  filter: grayscale(100%);
+}
+
+.header-logo .col-md-6 {
+  a.apply-button {
+  border: 1px solid $brand-primary;
+  color: $brand-primary;
+  border-radius: 5px;
+  padding: 10px 20px 10px 20px;
+  margin: 17px 25px 0 0;
+  float: right;
+  transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -webkit-transition: all .3s ease-in-out;
+  }
+  a.apply-button:hover, a.apply-button:focus {
+    background: $brand-primary;
+    border: 1px solid $brand-primary;
+    color: $white;
+    text-decoration: none;
+  }
 }
 
 @media (max-width: 767px) {
-  .header-logo .col-md-12 {
+  .header-logo .col-md-6 {
     display: none;
   }
 }
@@ -260,7 +292,6 @@ body > nav > div.navbar-header > button {
     letter-spacing: 1px;
     a {
       color: $brand-primary;
-      border-top: none;
     }
   }
 }
@@ -291,6 +322,11 @@ body > nav > div.navbar-header > button {
 
 .region-content a {
   text-decoration: underline;
+}
+
+.region-content a:hover,
+.region-content a:focus {
+  text-decoration: none;
 }
 
 .region-content h1.page-header {
