--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -118,8 +118,11 @@
 <!-- LOGO -->
 
 <div class="header-logo">
-  <div class="col-md-12">
+  <div class="col-sm-6 col-md-6">
     <a href="https://www.vancouver.wsu.edu"><img class="primary-logo" src="https://www.vancouver.wsu.edu/sites/www.vancouver.wsu.edu/themes/omegawsuv/images/wsu-vancouver-primary-logo-rgb.svg" alt="Washington State University Vancouver logo"></a>
+  </div>
+  <div class="col-sm-6 col-md-6">
+    <a class="apply-button" href="https://studentaffairs.vancouver.wsu.edu/admissions/apply">Apply now</a>
   </div>
 </div>
 
