--- a/css/style.css
+++ b/css/style.css
@@ -6559,15 +6559,16 @@ body > nav > div.navbar-header > button {
   .region-content blockquote p {
     margin-left: 5px; }
 
-.region-content button.btn-primary {
+.region-content button.btn-primary,
+.region-content a.btn-primary {
   margin: 10px 10px 10px 0;
-  padding: 10px 15px 10px 15px;
+  padding: 10px 20px 10px 20px;
   box-shadow: none;
   font-weight: bold;
   border-radius: 5px;
-  border: 0; }
-  .region-content button.btn-primary a {
-    text-decoration: none; }
+  border: 0;
+  text-decoration: none;
+  color: #fff; }
 
 .table {
   border: 1px solid #e7e9ea;
