Added static header link for "Research"

--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -82,11 +82,10 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-primary-navbar-collapse-1" tabindex="1">
         <ul class="nav navbar-nav">
-            <!-- <li><a href="https://www.vancouver.wsu.edu/about-wsu-vancouver">About</a></li> -->
             <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions">Admissions</a></li>
             <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions/degrees-majors-and-programs">Degrees</a></li>
             <li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/resources-current-students">Students</a></li>
-            <!-- <li><a href="https://admin.vancouver.wsu.edu/research">Research</a></li> -->
+            <li><a href="https://admin.vancouver.wsu.edu/research">Research</a></li>
             <li><a href="https://admin.vancouver.wsu.edu/development-and-alumni-relations">Alumni</a></li>
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
