--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -60,7 +60,7 @@
     <head-placeholder token="{{ placeholder_token|raw }}">
     <title>{{ head_title|safe_join(' | ') }}</title>
     <css-placeholder token="{{ placeholder_token|raw }}">
-    <js-placeholder token="{{ placeholder_token|raw }}">
+    <js-placeholder token="{{ placeholder_token|raw }}">  
     <link rel="shortcut icon" href="https://repo.wsu.edu/spine/1/favicon.ico" />
   </head>
   <body{{ attributes.addClass(body_classes) }}>
@@ -90,6 +90,7 @@
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
                 <ul class="dropdown-menu">
+                  <li><a href="https://admin.vancouver.wsu.edu/academic-affairs">Academics</a></li>
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/bookie-student-bookstore">Bookstore</a></li>
                   <li><a href="http://learn.wsu.edu/">Blackboard</a></li>
                   <li><a href="http://directory.vancouver.wsu.edu">Directory</a></li>
@@ -143,11 +144,11 @@
  			<li class="sitemap-section">WSU Vancouver</li>
 			<li><a href="https://www.vancouver.wsu.edu/about-wsu-vancouver">About WSU Vancouver</a></li>
 			<li><a href="https://admin.vancouver.wsu.edu">Administration</a></li>
-			<li><a href="https://www.vancouver.wsu.edu/campus-map-directions-and-parking-information">Campus Map</a></li>
 			<li><a href="https://hd.vancouver.wsu.edu/child-development">Child Development Program</a></li>
 			<li><a href="https://admin.vancouver.wsu.edu/human-resources/employment">Employment</a></li>
 			<li><a href="https://events.vancouver.wsu.edu">Events Calendar</a></li>
 			<li><a href="https://admin.vancouver.wsu.edu/parking/parking-services">Parking Services</a></li>
+      <li><a href="https://wsu.edu/about/statewide/">WSU Locations</a></li>
     	</ul>
   </div>
   <div class="col-md-3">
@@ -205,7 +206,7 @@
     <div class="col-md-6">
       <div>
   		<ul>
-        <li>14204 NE Salmon Creek Ave, Vancouver, WA, 98686</li>
+        <li><strong>14204 NE Salmon Creek Ave, Vancouver, WA, 98686</strong></li>
         <li><a href="tel:+13605469788">360-546-9788</a></li>
         <li><a href="https://www.vancouver.wsu.edu/campus-map-directions-and-parking-information">Map</a></li>
       </ul>
