--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -60,7 +60,7 @@
     <head-placeholder token="{{ placeholder_token|raw }}">
     <title>{{ head_title|safe_join(' | ') }}</title>
     <css-placeholder token="{{ placeholder_token|raw }}">
-    <js-placeholder token="{{ placeholder_token|raw }}">  
+    <js-placeholder token="{{ placeholder_token|raw }}">
     <link rel="shortcut icon" href="https://repo.wsu.edu/spine/1/favicon.ico" />
   </head>
   <body{{ attributes.addClass(body_classes) }}>
@@ -70,7 +70,7 @@
 
 <!-- NAVIGATION BAR -->
 
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-primary-navbar-collapse-1">
             <span class="sr-only">Toggle navigation</span>
